<resources>
    <string name="app_name">Calculator statistics</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="action_show_operations">Show operation history</string>
    <string name="action_show_daysstats">Show day statistics</string>
    <string name="action_show_operandstats">Show operand statistics</string>
</resources>
