<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.varukonto.calculator_brain.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="101"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_operations"
        android:orderInCategory="101"
        android:title="@string/action_show_operations"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_daysstats"
        android:orderInCategory="101"
        android:title="@string/action_show_daysstats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_operandstats"
        android:orderInCategory="101"
        android:title="@string/action_show_operandstats"
        app:showAsAction="never" />
</menu>
